fixing whitespace after footer

--- a/src/css/bustime.sass
+++ b/src/css/bustime.sass
@@ -937,7 +937,6 @@
         padding: $content-padding
         padding-top: 0
         position: relative 
-        top: -1px
     +mq-reverse($sidebar-switch)
       #search
         &.scrolled
